# deluge-minister

./: .gitignore  README.md  create_dev_link.sh  minister-storage.json  minister.py  requirements.txt  rules.json  setup.py
minister/: __init__.py  common.py  core.py  gtkui.py  webui.py
minister/data/: minister.js
native/: bazel-bin  bazel-genfiles  bazel-native  bazel-out  bazel-testlogs  build
native/inc/: AppArguments.h
native/src/: AppArguments.cpp  main.cpp
src/: BuildInfo.txt  CMakeLists.txt  Logger.h  main.cpp  producer.cpp
test/: rules.json
